# monogate

./: .gitignore  CHANGELOG.md  CONTEXT.md  LEADERBOARD.md  README.md  THEORY.md  capability_card.json  capability_card_public.json  package.json  streamlit_app.py
.github/workflows/: capcard.yml  pytest.yml
blog/: package-lock.json
blog/public/: capability_card.json  robots.txt
capcard_site/: index.html
capcard_site/schema/: v1.json
challenge/: next.config.mjs  package-lock.json  package.json
challenge/app/: globals.css  layout.tsx  page.tsx
challenge/types/: index.ts
docs/research/: constructibility_comparison.md
explorer/: index.html  package-lock.json  vercel.json  vite.config.js
explorer/src/: App.jsx  calc-engine.js  eml.js
lean/MonogateEML/: MonogateEML.lean  README.md  lakefile.toml
lean/pnp/: MonogatePNP.lean  lakefile.lean
lib/: README.md  package-lock.json  package.json
lib/src/: complex_eml.js  complex_eml.test.js  cost.js  cost_precision.test.js  index.js
monogate-core/: Cargo.toml
monogate-n12/: Cargo.toml
notebooks/: demo.ipynb
python/: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  MIGRATION_LOG.md  PAPER.md  README.md  RESULTS.md  THEORY.md  compute_cheap1.py  cost1_regression.py  mkdocs.yml  pyproject.toml
python/assets/: n11_share_card.md
python/experiments/: complex_eml_s100.py  complex_eml_s101.py  complex_eml_s102.py  complex_eml_s103.py  complex_eml_s104.py  complex_eml_s95.py  complex_eml_s96.py  complex_eml_s97.py  complex_eml_s98.py  complex_eml_s99.py  (+14 more)
src/: complex.js  complex.test.js  complex_eml.js
(+2479 files in other folders)
