[package]
name = "monogate-core"
version = "0.1.0"
edition = "2021"
description = "Compiled EML/BEST evaluation kernels for monogate"
license = "MIT"
authors = ["monogate contributors"]
repository = "https://github.com/monogate/monogate"
keywords = ["eml", "activation", "neural-network", "math"]
categories = ["science", "mathematics"]

[lib]
name = "monogate_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.8"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
python = ["pyo3", "numpy"]
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "n12_search"
path = "src/bin/n12_search.rs"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
